fix: :bug: Fixed a bug of text overflowing by overflow-wrap:anywhere

--- a/src/assets/styles/pages/_session-detail.scss
+++ b/src/assets/styles/pages/_session-detail.scss
@@ -134,3 +134,8 @@
         padding-inline: 8px;
     }
   }
+
+
+.mantine-Text-root{
+  overflow-wrap: anywhere !important
+}
